section-2/step-09/kubernetes/main-app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: miles-and-smiles
  namespace: miles-and-smiles
  labels:
    app.kubernetes.io/name: miles-and-smiles
    app.kubernetes.io/version: 1.0.0
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: miles-and-smiles
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miles-and-smiles
  namespace: miles-and-smiles
  labels:
    app.kubernetes.io/name: miles-and-smiles
    app.kubernetes.io/version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: miles-and-smiles
  template:
    metadata:
      labels:
        app.kubernetes.io/name: miles-and-smiles
        app.kubernetes.io/version: 1.0.0
    spec:
      serviceAccountName: miles-and-smiles
      containers:
        - name: miles-and-smiles
          image: quay.io/kevindubois/miles-and-smiles:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /q/health/started
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 30
      terminationGracePeriodSeconds: 10
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: miles-and-smiles
  namespace: miles-and-smiles
  labels:
    app.kubernetes.io/name: miles-and-smiles
spec:
  parentRefs:
    - name: default-gateway
      namespace: openshift-ingress
  hostnames:
    - miles-and-smiles.apps.cluster.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: miles-and-smiles
          port: 80
