section-2/step-09/kubernetes/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: miles-and-smiles
  namespace: miles-and-smiles
  labels:
    app.kubernetes.io/name: miles-and-smiles
spec:
  to:
    kind: Service
    name: miles-and-smiles
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
